# rust-binary-reader

./: .gitignore  Cargo.toml
binary_processor/: .gitignore  Cargo.toml  output.txt  output_opt.txt
binary_processor/src/: lib.rs
data_converter/: Cargo.toml
data_converter/src/: main.rs
sensor_reader/: Cargo.toml
sensor_reader/src/: lib.rs
